[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ultrafast-secp256k1"
version = "4.0.0"
description = "Python bindings for UltrafastSecp256k1 — high-performance secp256k1 ECDSA, Schnorr, FROST, MuSig2, BIP-352 elliptic curve library with GPU acceleration"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "UltrafastSecp256k1 Contributors"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: C++",
    "Topic :: Security :: Cryptography",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Mathematics",
]
keywords = [
    "secp256k1", "ecdsa", "schnorr", "bitcoin", "ethereum", "cryptography",
    "elliptic-curve", "taproot", "bip32", "bip340", "bip352", "frost",
    "musig2", "gpu", "cuda", "signing", "verification", "wallet",
    "threshold-signatures", "constant-time",
]

[project.urls]
Homepage = "https://github.com/shrec/UltrafastSecp256k1"
Repository = "https://github.com/shrec/UltrafastSecp256k1"
Documentation = "https://github.com/shrec/UltrafastSecp256k1/tree/main/bindings/python"
Changelog = "https://github.com/shrec/UltrafastSecp256k1/blob/main/CHANGELOG.md"
Issues = "https://github.com/shrec/UltrafastSecp256k1/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["ultrafast_secp256k1*"]
